2011-04-28  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Sam Weinig.

        [GTK] Remove WKURLCreateWithURL()
        https://bugs.webkit.org/show_bug.cgi?id=59691

        The name is a bit confusing and there's already
        WKURLCreateWithUTF8CString() in the C API.

        * UIProcess/API/C/gtk/WKView.cpp:
        * UIProcess/API/C/gtk/WKView.h:

2011-04-28  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Make WebKitWebViewBase public in the API
        https://bugs.webkit.org/show_bug.cgi?id=59689

        Add WebKitWebViewBasePrivate.h and move WebKitWebViewBase inernal
        methods to it. Rename get_type() method, since it's part of the
        public API and should follow gtk coding style.

        * GNUmakefile.am: Add WebKitWebViewBasePrivate.h.
        * UIProcess/API/C/gtk/WKView.cpp: Use WebKitWebViewBasePrivate.h.
        * UIProcess/API/gtk/PageClientImpl.cpp: Ditto.
        * UIProcess/API/gtk/WebKitWebViewBase.cpp:
        (webkitWebViewBaseFinalize):
        (webkit_web_view_base_init):
        (webViewSizeAllocate):
        (webViewFocusInEvent):
        (webViewFocusOutEvent):
        (webViewKeyPressEvent):
        (webViewKeyReleaseEvent):
        (webkit_web_view_base_class_init):
        * UIProcess/API/gtk/WebKitWebViewBase.h:
        * UIProcess/API/gtk/WebKitWebViewBasePrivate.h: Copied from Source/WebKit2/UIProcess/API/C/gtk/WKView.cpp.
        * UIProcess/gtk/ChunkedUpdateDrawingAreaProxyGtk.cpp: Use WebKitWebViewBasePrivate.h.

2011-04-28  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Move WebView to UIProcess/API/gtk
        https://bugs.webkit.org/show_bug.cgi?id=59686

        And rename it as PageClientImpl, since it's a page client
        implementation, not a web view.

        * GNUmakefile.am:
        * UIProcess/API/C/gtk/WKView.cpp: